# rgp-analyzer-cli

./: .gitignore  README.md  pyproject.toml
bak/rgp_analyzer_cli_v1/: cli.py  decode_bridge.py  json_utils.py  native_decode.py  parser.py  shader_triage.py  sqtt_stitch.py  stitch_model.py
bak/rgp_analyzer_cli_v1/tinygrad_support/: common.py  decoder.py  isa_map.py  userdata_markers.py
bak/rgp_analyzer_cli_v2/: analyze.py  cli.py  compare.py  dispatch_isa_evidence.py  marker_sources.py  models.py  render.py  services.py  span_assignment.py
bak/rgp_analyzer_cli_v2/tinygrad_support/: userdata_markers.py
docs/: metrics.md
examples/medium-vulkan-graph-rgp/: README.md
examples/medium-vulkan-graph-rgp/src/: analyze-latest.sh  build.sh  capture-rgp.sh  compile-shaders.sh  main.cpp  probe-field-semantics.sh  run.sh
examples/minimal-vulkan-compute-rgp/: README.md
examples/minimal-vulkan-compute-rgp/src/: analyze-latest.sh  build.sh  capture-rgp.sh  capture-scenarios.sh  main.cpp  run.sh  validate-scenarios.sh
examples/z-image-turbo-rgp/: README.md
examples/z-image-turbo-rgp/app/: Makefile  build-direct.ps1  direct-txt2img.cpp  expose.h  model_adapter.cpp  model_adapter.h
examples/z-image-turbo-rgp/src/: analyze-latest.sh  build.sh  capture-diffusion-profile.sh  capture-focused-rgp.sh  capture-phase-rgp.sh  capture-rgp.sh  common.sh  compare-trace-quality.py  compare-tuning-runs.py  compare-tuning-runs.sh  correlate-captures-to-phases.py  mount-windows-games.sh  perf-then-capture.sh  probe-phases.sh  probe-profile-knobs.sh  probe-runtime-knobs.sh  profile-and-analyze.sh  rank-captures.py  reproduce-profile-fix.sh  run-perf.sh  run-phase-perf.sh  run-phase.sh  run.sh  summarize-vk-timings.py  summarize-workload-evidence.py  sync-weights.sh
native/rocm_sqtt_decoder_helper/: build.sh  main.cpp
scripts/: release-check.sh
src/rgp_analyzer_cli/: analyze.py  api_context.py  cache.py  capture_compare.py  cli.py  compare.py  legacy_render.py  marker_scan.py  marker_sources.py  metrics_reference.py  models.py  parser.py  profiling_analysis.py  render.py  render_focus.py  render_focus_compare.py  render_regions.py  resource_metadata.py  rgp_records.py  services.py  shader_analysis.py  shader_focus.py  shader_focus_instructions.py  shader_focus_regions.py  shader_focus_runtime.py  shader_focus_sources.py  shader_triage.py  sqtt_stitch.py  stitch_model.py  stitch_records.py  stream_assignment.py
src/rgp_analyzer_cli/tinygrad_support/: decoder.py  isa_map.py
vulkan-to-7900xtx-isa-tutorial/: README.md
vulkan-to-7900xtx-isa-tutorial/ch01/: README.md
vulkan-to-7900xtx-isa-tutorial/ch01/src/: analyze-latest.sh  build.sh  capture-rgp.sh  compile-shaders.sh  main.cpp  run.sh
vulkan-to-7900xtx-isa-tutorial/ch02/: README.md
vulkan-to-7900xtx-isa-tutorial/ch02/src/: analyze-baseline.sh  analyze-reg-pressure.sh  build.sh  capture-baseline.sh  capture-reg-pressure.sh  compare.sh  compile-shaders.sh  main.cpp  run-baseline.sh  run-reg-pressure.sh
vulkan-to-7900xtx-isa-tutorial/ch03/: README.md
vulkan-to-7900xtx-isa-tutorial/ch03/src/: analyze-baseline.sh  analyze-memory-heavy.sh  analyze-sync-heavy.sh  build.sh  capture-baseline.sh  capture-memory-heavy.sh  capture-sync-heavy.sh  compare-memory.sh  compare-sync.sh  compile-shaders.sh  main.cpp  run-baseline.sh  run-memory-heavy.sh  run-sync-heavy.sh
vulkan-to-7900xtx-isa-tutorial/ch04/: README.md
vulkan-to-7900xtx-isa-tutorial/ch04/src/: analyze-cooperative.sh  analyze-scalar.sh  build.sh  capture-cooperative.sh  capture-scalar.sh  compare.sh  compile-shaders.sh  main.cpp  run-cooperative.sh  run-scalar.sh
vulkan-to-7900xtx-isa-tutorial/ch05/: README.md
vulkan-to-7900xtx-isa-tutorial/ch05/src/: analyze-wmma-k2.sh  analyze-wmma-row2.sh  analyze-wmma-tile16.sh  build.sh  capture-wmma-k2.sh  capture-wmma-row2.sh  capture-wmma-tile16.sh  compare-k2.sh  compare-row2.sh  compile-shaders.sh  main.cpp  run-wmma-k2.sh  run-wmma-row2.sh  run-wmma-tile16.sh
vulkan-to-7900xtx-isa-tutorial/ch06/: README.md
vulkan-to-7900xtx-isa-tutorial/ch06/src/: analyze-clean.sh  analyze-conflict.sh  build.sh  capture-clean.sh  capture-conflict.sh  compare.sh  compile-shaders.sh  main.cpp  run-clean.sh  run-conflict.sh
vulkan-to-7900xtx-isa-tutorial/ch07/: README.md
vulkan-to-7900xtx-isa-tutorial/ch07/src/: analyze.sh  build.sh  capture.sh  main.cpp  run.sh
vulkan-to-7900xtx-isa-tutorial/ch08/: README.md
vulkan-to-7900xtx-isa-tutorial/ch08/src/: analyze-naive.sh  build.sh  capture-flash-attention.sh  capture-naive.sh  compare.sh  compile-shaders.sh  main.cpp  run-flash-attention.sh  run-naive.sh
vulkan-to-7900xtx-isa-tutorial/ch09/: README.md
vulkan-to-7900xtx-isa-tutorial/ch09/src/: build.sh  (+9 more)
vulkan-to-7900xtx-isa-tutorial/ch10/: README.md
vulkan-to-7900xtx-isa-tutorial/ch10/src/: CMakeLists.txt  analyze-latest.sh  build.sh  capture-rgp.sh  main.cpp  run.sh
vulkan-to-7900xtx-isa-tutorial/ch11/: README.md
vulkan-to-7900xtx-isa-tutorial/ch12/: README.md
vulkan-to-7900xtx-isa-tutorial/ch13/: README.md
vulkan-to-7900xtx-isa-tutorial/ch13/src/: CMakeLists.txt  build.sh  ch13_gguf_runtime.cpp  ch13_gguf_runtime.h  ch13_qk_fused_path.cpp  ch13_qk_fused_path.h  compare-layer-probe-cpu-vs-vulkan.sh  compare-official-qwen3-backbone.py  convert-official-qwen3-gguf.sh  export-runtime-assets.py  extract-official-qwen3-hf.py  inspect_runtime_gguf.cpp  mlp_fused.comp  pack_runtime_gguf.cpp  qk_fused.comp  run-official-qwen3-baseline.sh  run.sh  runtime_gguf_attention_core_probe.cpp  runtime_gguf_attention_hybrid_probe.cpp  runtime_gguf_attention_mix_probe.cpp  runtime_gguf_attn_fused_qk_probe.cpp  runtime_gguf_attn_probe.cpp  runtime_gguf_attn_qk_f32w_probe.cpp  runtime_gguf_backbone.cpp  runtime_gguf_backbone_tail_hybrid.cpp  runtime_gguf_first_graph.cpp  runtime_gguf_iterative_decode.cpp  runtime_gguf_layer0.cpp  runtime_gguf_layer_fused_qk_probe.cpp  runtime_gguf_layer_probe.cpp  runtime_gguf_linear_probe.cpp  runtime_gguf_mlp_probe.cpp  runtime_gguf_rope_probe.cpp  runtime_gguf_smoke.cpp  runtime_qk_fused_probe.cpp  setup-venv.sh
(+213 files in other folders)
